<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Note Management System</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_category">Category</string>
    <string name="menu_priority">Priority</string>
    <string name="menu_status">Status</string>
    <string name="menu_note">Note</string>
    <string name="menu_send">Send</string>
    <string name="label_account">Account</string>
    <string name="menu_edit_profile">Edit profile</string>
    <string name="menu_change_password">Change password</string>
    <string name="priority_form">Priority Form</string>
    <string name="close">Close</string>
    <string name="add">Add</string>
    <string name="category_form">Category Form</string>

    <string name="plain_text_note" >Enter note name</string>
    <string name="button_note_calender">...</string>
    <string name="edit_category">Select category...</string>
    <string name="edit_priority">Select priority...</string>
    <string name="edit_status">Select status...</string>
    <string name="edit_date">Select plain date</string>
    <string name="update_note">Update</string>

    <!--Tuong Nguyen 10/11/2019-->
    <string name="label_edit_profile">Edit profile</string>
    <string name="hint_enter_first_name">Enter your first name</string>
    <string name="hint_enter_last_name">Enter your last name</string>
    <string name="hint_enter_email">Enter your email</string>
    <string name="button_change">Change</string>
    <string name="button_home">Home</string>

    <string name="label_change_pwd">Change your password</string>
    <string name="hint_enter_current_pwd">Enter your current password</string>
    <string name="hint_enter_new_pwd">Enter new password</string>
    <string name="hint_confirm_pwd">Enter password again</string>

    <!--Hoang My 10/11/2019-->
    <string name="label_login">Note Management System</string>
    <string name="hint_email">Enter your email</string>
    <string name="hint_password">Enter your password</string>
    <string name="check_remember">Remember Me</string>
    <string name="button_sign_in">Sign In</string>
    <string name="button_exit">Exit</string>




</resources>
