<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="300dp"
        android:layout_height="305dp">

        <EditText
            android:id="@+id/editText"
            android:layout_width="293dp"
            android:layout_height="44dp"
            android:layout_marginTop="36dp"
            android:ems="10"
            android:hint="@string/plain_text_note"
            android:inputType="textPersonName"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/buttonadd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginBottom="4dp"
            android:text="@string/add"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/buttoncalender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_note_calender"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />

        <Button
            android:id="@+id/buttonclose"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:text="@string/close"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <LinearLayout
            android:layout_width="174dp"
            android:layout_height="146dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="22dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toStartOf="@+id/buttoncalender"
            app:layout_constraintTop_toBottomOf="@+id/editText">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="165dp"
                android:layout_height="35dp"
                android:text="@string/edit_category"
                android:textColor="@android:color/black"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="165dp"
                android:layout_height="35dp"
                android:text="@string/edit_priority"
                android:textColor="@android:color/black"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="165dp"
                android:layout_height="35dp"
                android:text="@string/edit_status"
                android:textColor="@android:color/black"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textViewPlaindate"
                android:layout_width="165dp"
                android:layout_height="35dp"
                android:text="@string/edit_date"
                android:textSize="15sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="78dp"
            android:layout_height="99dp"
            android:layout_marginTop="30dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editText">

            <Spinner
                android:id="@+id/spinner_category"
                android:layout_width="80dp"
                android:layout_height="30dp" />

            <Spinner
                android:id="@+id/spinner_priority"
                android:layout_width="80dp"
                android:layout_height="30dp" />

            <Spinner
                android:id="@+id/spinner_status"
                android:layout_width="80dp"
                android:layout_height="30dp" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>