<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="303dp"
        android:layout_height="310dp">

        <EditText
            android:id="@+id/editTextNoteNameEdit"
            android:layout_width="286dp"
            android:layout_height="46dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="11dp"
            android:ems="10"
            android:hint="@string/plain_text_note"
            android:inputType="textPersonName"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <Button
            android:id="@+id/buttonUpdateEdit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:layout_marginBottom="2dp"
            android:text="@string/update_note"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/buttonCloseEdit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="1dp"
            android:layout_marginBottom="2dp"
            android:text="@string/close"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <Button
            android:id="@+id/buttonPlandateEdit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_note_calender"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />

        <LinearLayout
            android:layout_width="177dp"
            android:layout_height="151dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="12dp"
            android:orientation="vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextNoteNameEdit">

            <TextView
                android:id="@+id/textViewcategoryEdit"
                android:layout_width="165dp"
                android:layout_height="35dp"
                android:text="@string/edit_category"
                android:textColor="@android:color/black"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textViewPriorityEdit"
                android:layout_width="165dp"
                android:layout_height="35dp"
                android:text="@string/edit_priority"
                android:textColor="@android:color/black"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textViewStatusEdit"
                android:layout_width="165dp"
                android:layout_height="35dp"
                android:text="@string/edit_status"
                android:textColor="@android:color/black"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textViewPlanDateEdit"
                android:layout_width="165dp"
                android:layout_height="35dp"
                android:text="@string/edit_date" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="61dp"
            android:layout_height="108dp"
            android:layout_marginTop="12dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextNoteNameEdit">

            <Spinner
                android:id="@+id/spinnerCategoryEdit"
                android:layout_width="55dp"
                android:layout_height="35dp" />

            <Spinner
                android:id="@+id/spinnerPriorityEdit"
                android:layout_width="55dp"
                android:layout_height="35dp" />

            <Spinner
                android:id="@+id/spinnerStatusEdit"
                android:layout_width="55dp"
                android:layout_height="35dp" />
        </LinearLayout>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="13dp"
            android:text="@string/plain_text_note"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>